--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,4 +1,10 @@
-.carouselbg{
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.carouselbg {
   opacity: 1;
   height: 100vh;
   object-fit: cover;
@@ -65,35 +71,151 @@
   color: #fff;
   text-align: center;
 }
-.bg-img{
+
+.bg-img {
   height: 100vh;
 }
 
-.content{
-  background: #1E0E62; 
+.content {
+  background: #1E0E62;
   overflow-x: hidden;
 }
 
-.card{
+.card {
   max-width: 540px;
   background-color: #1E0E62;
   border: 2px solid #CCC;
 }
 
-.yt-logo{
+.yt-logo {
   color: red;
   height: 70px;
   width: 70px;
 }
 
-.work-btn{
+.work-btn {
   background-color: transparent;
   border: 2px solid #fff;
   color: #fff;
 }
 
-.team-card{
+.work-btn:hover {
+  background-color: transparent;
+  border: 2px solid #fff;
+  color: #fff;
+}
+
+.work-btn:focus {
+  background-color: #fff;
+  border: 2px solid #fff;
+  color: #1E0E62;
+}
+
+.team-card {
   width: 100px;
   height: 100px;
   border-radius: 50%;
 }
+
+.contact {
+  position: absolute;
+  margin-top: 100px;
+}
+
+.input-style {
+  border-radius: 20px !important;
+}
+
+.form-label {
+  font-weight: bold;
+  font-family: sans-serif;
+  letter-spacing: 2px;
+  font-size: 14px;
+}
+
+.contact-btn {
+  width: 120px;
+  height: 50px;
+}
+
+.signimg {
+  opacity: 1;
+  object-fit: cover;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(75, 0, 130, 0.9);
+}
+
+.form-btn {
+  width: 100%;
+}
+
+.feature-card{
+background: transparent;
+color: #fff;
+}
+
+.features-object {
+  position: relative;
+  /* z-index: 1; */
+}
+
+.object-img {
+  width: 983.3px;
+height: 400px;
+top: 14px;
+left: -140px;
+gap: 0px;
+opacity: 0px;
+
+  position: absolute;
+  /* top: 50%;
+  left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  z-index: 2;
+}
+
+.object-bg {
+  z-index: 1;
+  width: 733.6px;
+  height: 449.88px;
+  top: 126.41px;
+  left: -376.89px;
+  gap: 0px;
+  border-radius: 11px 0px 0px 0px;
+  opacity: 0px;  
+}
+
+.plan-detail{
+  display: flex;justify-content: center;
+  align-items: center;
+}
+
+.pricingBg{
+  position: absolute;
+  overflow-x: hidden;
+}
+.pricing{
+  position: relative;
+}
+
+.text-white{
+  text-decoration: none;
+}
+
+
+
+
+@media only screen and (max-width:1040px) {
+  .contact {
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .contact {
+    margin-top:0px;
+  }
+
+}
+
